fix: align body and burger icon

--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -2,12 +2,9 @@
   position: relative;
 
   display: flex;
-  justify-content: end;
   align-items: center;
 
   height: 4.4rem;
-  padding: 0 3.2rem;
-  margin-top: 2rem;
 
   border: 1px solid royalblue;
 }
