--- a/src/sass/abstracts/variables.module.scss
+++ b/src/sass/abstracts/variables.module.scss
@@ -13,4 +13,7 @@ $color-text-xxl: #000000;
 $color-accent: #ff0000;
 
 // Layout
-$content-left-spacing: 25.5rem;
+$body-top-padding: 2rem;
+$body-left-padding: 3rem;
+
+$content-left-spacing: 22.5rem;
